# Backup-Sync-CLI

./: .gitignore  README.md  TESTING.md  pyproject.toml
.github/workflows/: backup-sync-cli.yml
safesync/: __init__.py  cli.py  database.py  engine.py  hashing.py  models.py  safety.py
tests/: test_cli.py  test_database.py  test_engine.py
