[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backup-sync-cli"
version = "0.1.0"
description = "Safe backup and folder synchronization CLI with SQLite history."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Maria" }
]
dependencies = []

[project.scripts]
backup = "safesync.cli:main"

[tool.setuptools.packages.find]
include = ["safesync*"]
